[package]
name = "pwasm-utils"
version = "0.16.1"
edition = "2018"
authors = ["Nikolay Volf <nikvolf@gmail.com>", "Sergey Pepyakin <s.pepyakin@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Collection of command-line utilities and corresponding Rust api for producing pwasm-compatible executables"
keywords = ["wasm", "webassembly", "pwasm"]
repository = "https://github.com/paritytech/wasm-utils"

[[bin]]
name = "wasm-prune"
path = "cli/prune/main.rs"
required-features = ["cli"]

[[bin]]
name = "wasm-ext"
path = "cli/ext/main.rs"
required-features = ["cli"]

[[bin]]
name = "wasm-gas"
path = "cli/gas/main.rs"
required-features = ["cli"]

[[bin]]
name = "wasm-build"
path = "cli/build/main.rs"
required-features = ["cli"]

[[bin]]
name = "wasm-stack-height"
path = "cli/stack_height/main.rs"
required-features = ["cli"]

[[bin]]
name = "wasm-pack"
path = "cli/pack/main.rs"
required-features = ["cli"]

[[bin]]
name = "wasm-check"
path = "cli/check/main.rs"
required-features = ["cli"]

[dependencies]
# If you add the feature "bulk", make sure you fixed all expects that say
# "parity-wasm is compiled without bulk-memory operations"
parity-wasm = { version = "0.42.1", default-features = false }
log = { version = "0.4", default-features = false }
byteorder = { version = "1", default-features = false }

# Dependencies only used by the binaries
glob = { version = "0.2", optional = true }
clap = { version = "2.24", optional = true }
env_logger = { version = "0.5", optional = true }
lazy_static = { version = "1.0", optional = true }

[dev-dependencies]
tempdir = "0.3"
wabt = "0.10"
diff = "0.1.11"
indoc = "0.3"
rand = "0.7"
binaryen = "0.8"

[features]
default = ["std"]
std = ["parity-wasm/std", "log/std", "byteorder/std"]
cli = [
  "std",
  "glob",
  "clap",
  "env_logger",
  "lazy_static",
]
