[package]
name = "pwasm-utils-cli"
version = "0.6.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>", "Sergey Pepyakin <s.pepyakin@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Collection of command-line utilities and corresponding Rust api for producing pwasm-compatible executables"
keywords = ["wasm", "webassembly", "pwasm"]

[lib]

[[bin]]
name = "wasm-prune"
path = "prune/main.rs"

[[bin]]
name = "wasm-ext"
path = "ext/main.rs"

[[bin]]
name = "wasm-gas"
path = "gas/main.rs"

[[bin]]
name = "wasm-build"
path = "build/main.rs"

[[bin]]
name = "wasm-stack-height"
path = "stack_height/main.rs"

[[bin]]
name = "wasm-pack"
path = "pack/main.rs"

[[bin]]
name = "wasm-check"
path = "check/main.rs"

[dependencies]
parity-wasm = "0.31"
pwasm-utils = { path = "..", version = "0.6" }
glob = "0.2"
clap = "2.24"
log = "0.4"
env_logger = "0.5"
lazy_static = "1.0"

[dev-dependencies]
tempdir = "0.3"
